# AdNetwork-Payspace

./: .gitignore  .testnet.env  README.md
.claude/: CLAUDE.md  settings.json
contracts/: Cargo.toml
contracts/.cargo/: config.toml
contracts/booking-space-type/: Cargo.toml  README.md
contracts/booking-space-type/src/: error.rs  main.rs
contracts/payment-channel-lock/: Cargo.toml  README.md
contracts/payment-channel-lock/src/: error.rs  main.rs
scripts/: build.sh  deploy-xudt  dev-stack.sh  ensure_xudt_env.mjs  init_openclaw_workspace.mjs  setup.sh  stop_servers.sh  xudt_env_hint.sh
scripts/helpers/: README.md
